# Image-Classifier

./: .gitignore  CMakeLists.txt  Main.qml  Readme.md  backend.cpp  backend.h  main.cpp
backend/: main.py  model.py  requirements.txt
